23Mar06=======================================================================
1. Added cty-1603 data.
2. On the advice of Jim AD1C I have changed around some things in wpxloc.raw
that affect 8J,CT2,KC4,KG4,KG6,ZK1 and ZS2. These should now show the more 
likely canonical prefix.
3. On the advice of Tom WB8ZRL, I have made BW an alias for BV (Taiwan) and 
made some other changes to affect the selection between the mainland and the
island more reliable. 
10Mar06=======================================================================
1. fix sh/c/n.
2. Add new Spanish translations by Angel EA7WA.
07Mar06=======================================================================
1. Add the node call to remote tell_login and tell_buddie calls.
06Mar06=======================================================================
1. Fix warning on empty PC19s.
2. Add new command set/local_node to allow people to see logins/outs on other
related nodes.
3. Add new command set/buddy to allow people to see when their favorite 
chum(s) logins/out.
4. Arrange filter reading so that the following order is followed for users: 
callsign, callsign less ssid, user_default. Nodes are unchanged. 
14Feb06=======================================================================
1. Turn R and SFI around in mrtg.pl.
13Feb06=======================================================================
1. Updated prefixes with cty-1601 data.
2. Fixed qth in show/muf so that it shows the correct qth (if known).
3. Try to make the state machine in convkeps.pl deal with more variations
of the 2 line keps sets that are available on line. Also give a sensible
error message if no keps were actually decoded.
4. Update the base keps to the latest set of AMSAT keps 06033.
04Feb06=======================================================================
1. Explicitly ignore spots with lower case characters in the spotted call
01Feb06=======================================================================