@@ -1,3 +1,7 @@
+26Mar06=======================================================================
+1. Arrange for any online buddies to be displayed when a user logs on.
+2. Try to reduce the amount of POSIX stuff that is loaded to just that which
+is required.
 23Mar06=======================================================================
 1. Added cty-1603 data.
 2. On the advice of Jim AD1C I have changed around some things in wpxloc.raw
